Modernize dependencies and fix Hibernate 7 alignment
- Align crnk-data-jpa with Spring Boot 4 BOM: Hibernate 6.6.4→7.1.8,
  Jakarta Persistence 3.1→3.2, Spring 6.2→7.0, Jakarta EE 10→11
- Fix JpaCriteriaQueryBackend plural path handling for Hibernate 7:
  use isMember() for collection attributes, preserve MapJoin precedence
- Replace deprecated Class.newInstance() with getConstructor().newInstance()
- Use StandardCharsets.UTF_8 instead of Charset.forName("utf8")
- Upgrade Reflections 0.9.11→0.10.2, AssertJ 2.2.0/3.9.1→3.27.3
- Replace Guava test usages (Sets, ImmutableMap/Set/List) with Java stdlib
- Remove unused version properties from versions.properties

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>