@@ -1,7 +1,5 @@
 package io.crnk.core.queryspec.pagingspec;
 
-import com.google.common.collect.ImmutableMap;
-import com.google.common.collect.ImmutableSet;
 import io.crnk.core.engine.internal.registry.ResourceRegistryImpl;
 import io.crnk.core.engine.query.QueryContext;
 import io.crnk.core.engine.registry.DefaultResourceRegistryPart;
@@ -48,7 +46,7 @@ public class OffsetLimitPagingBehaviorTest {
 		OffsetLimitPagingBehavior pagingBehavior = new OffsetLimitPagingBehavior();
 		Map<String, Set<String>> result = pagingBehavior.serialize(new OffsetLimitPagingSpec(1L, null), "tasks");
 
-		assertEquals(ImmutableSet.of("1"), result.get("page[offset]"));
+		assertEquals(Set.of("1"), result.get("page[offset]"));
 		assertFalse(result.containsKey("page[limit]"));
 		assertEquals(1, result.size());
 	}
@@ -59,7 +57,7 @@ public class OffsetLimitPagingBehaviorTest {
 		Map<String, Set<String>> result = pagingBehavior.serialize(new OffsetLimitPagingSpec(0L, 30L), "tasks");
 
 		assertFalse(result.containsKey("page[offset]"));
-		assertEquals(ImmutableSet.of("30"), result.get("page[limit]"));
+		assertEquals(Set.of("30"), result.get("page[limit]"));
 		assertEquals(1, result.size());
 	}
 
@@ -68,8 +66,8 @@ public class OffsetLimitPagingBehaviorTest {
 		OffsetLimitPagingBehavior pagingBehavior = new OffsetLimitPagingBehavior();
 		Map<String, Set<String>> result = pagingBehavior.serialize(new OffsetLimitPagingSpec(1L, 30L), "tasks");
 
-		assertEquals(ImmutableSet.of("1"), result.get("page[offset]"));
-		assertEquals(ImmutableSet.of("30"), result.get("page[limit]"));
+		assertEquals(Set.of("1"), result.get("page[offset]"));
+		assertEquals(Set.of("30"), result.get("page[limit]"));
 		assertEquals(2, result.size());
 	}
 
@@ -84,7 +82,7 @@ public class OffsetLimitPagingBehaviorTest {
 	@Test
 	public void testDeserializeDefaultWithOffset() {
 		OffsetLimitPagingBehavior pagingBehavior = new OffsetLimitPagingBehavior();
-		OffsetLimitPagingSpec result = pagingBehavior.deserialize(ImmutableMap.of("offset", ImmutableSet.of("1")));
+		OffsetLimitPagingSpec result = pagingBehavior.deserialize(Map.of("offset", Set.of("1")));
 
 		assertEquals(new OffsetLimitPagingSpec(1L, null), result);
 	}
@@ -92,7 +90,7 @@ public class OffsetLimitPagingBehaviorTest {
 	@Test
 	public void testDeserializeDefaultWithLimit() {
 		OffsetLimitPagingBehavior pagingBehavior = new OffsetLimitPagingBehavior();
-		OffsetLimitPagingSpec result = pagingBehavior.deserialize(ImmutableMap.of("limit", ImmutableSet.of("30")));
+		OffsetLimitPagingSpec result = pagingBehavior.deserialize(Map.of("limit", Set.of("30")));
 
 		assertEquals(new OffsetLimitPagingSpec(0L, 30L), result);
 	}
@@ -110,7 +108,7 @@ public class OffsetLimitPagingBehaviorTest {
 	public void testDeserializeOffsetWithOffset() {
 		OffsetLimitPagingBehavior pagingBehavior = new OffsetLimitPagingBehavior();
 		pagingBehavior.setDefaultOffset(1L);
-		OffsetLimitPagingSpec result = pagingBehavior.deserialize(ImmutableMap.of("offset", ImmutableSet.of("1")));
+		OffsetLimitPagingSpec result = pagingBehavior.deserialize(Map.of("offset", Set.of("1")));
 
 		assertEquals(new OffsetLimitPagingSpec(1L, null), result);
 	}
@@ -119,7 +117,7 @@ public class OffsetLimitPagingBehaviorTest {
 	public void testDeserializeOffsetWithLimit() {
 		OffsetLimitPagingBehavior pagingBehavior = new OffsetLimitPagingBehavior();
 		pagingBehavior.setDefaultOffset(1L);
-		OffsetLimitPagingSpec result = pagingBehavior.deserialize(ImmutableMap.of("limit", ImmutableSet.of("30")));
+		OffsetLimitPagingSpec result = pagingBehavior.deserialize(Map.of("limit", Set.of("30")));
 
 		assertEquals(new OffsetLimitPagingSpec(1L, 30L), result);
 	}
@@ -137,7 +135,7 @@ public class OffsetLimitPagingBehaviorTest {
 	public void testDeserializeLimitWithOffset() {
 		OffsetLimitPagingBehavior pagingBehavior = new OffsetLimitPagingBehavior();
 		pagingBehavior.setDefaultLimit(30L);
-		OffsetLimitPagingSpec result = pagingBehavior.deserialize(ImmutableMap.of("offset", ImmutableSet.of("1")));
+		OffsetLimitPagingSpec result = pagingBehavior.deserialize(Map.of("offset", Set.of("1")));
 
 		assertEquals(new OffsetLimitPagingSpec(1L, 30L), result);
 	}
@@ -146,7 +144,7 @@ public class OffsetLimitPagingBehaviorTest {
 	public void testDeserializeLimitWithLimit() {
 		OffsetLimitPagingBehavior pagingBehavior = new OffsetLimitPagingBehavior();
 		pagingBehavior.setDefaultLimit(30L);
-		OffsetLimitPagingSpec result = pagingBehavior.deserialize(ImmutableMap.of("limit", ImmutableSet.of("10")));
+		OffsetLimitPagingSpec result = pagingBehavior.deserialize(Map.of("limit", Set.of("10")));
 
 		assertEquals(new OffsetLimitPagingSpec(0L, 10L), result);
 	}
@@ -154,8 +152,8 @@ public class OffsetLimitPagingBehaviorTest {
 	@Test
 	public void testDeserialize() {
 		OffsetLimitPagingBehavior pagingBehavior = new OffsetLimitPagingBehavior();
-		OffsetLimitPagingSpec result = pagingBehavior.deserialize(ImmutableMap.of("offset", ImmutableSet.of("1"),
-				"limit", ImmutableSet.of("30")));
+		OffsetLimitPagingSpec result = pagingBehavior.deserialize(Map.of("offset", Set.of("1"),
+				"limit", Set.of("30")));
 
 		assertEquals(new OffsetLimitPagingSpec(1L, 30L), result);
 	}
